--- a/index.html
+++ b/index.html
@@ -1,11 +1,36 @@
 <!doctype html>
 <html>
-    <head>
+
+<head>
     <title>Play a Game!</title>
-    <link rel="stylesheet" href="nodemodules/bootstrap/dist/css/mootstrap.min.css">
-    <script src="nodemodules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="node_modules/css-reset/reset.css">
+    <script src="node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="js/app.js"></script>
 </head>
+
 <body>
-    
+    <div id="wrapper">
+        <header>
+            <nav>
+                <ul>
+                    <li><a href="#slide1">slide1</a></li>
+                    <li><a href="#slide2">slide2</a></li>
+                    <li><a href="#slide3">slide3</a></li>
+                    <li><a href="#slide4">В БОЙ!</a></li>
+                </ul>
+            </nav>
+        </header>
+        <div id="main">
+            <div name="slide1"></div>
+            <div name="slide1"></div>
+            <div name="slide1"></div>
+            <div id="slide4"></div>
+        </div>
+        <footer>
+
+        </footer>
+    </div>
 </body>
+
 </html>
