--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
             </nav>
         </header>
         <div id="main">
-            <div name="slide1"></div>
-            <div name="slide1"></div>
-            <div name="slide1"></div>
+            <div id="slide1"></div>
+            <div id="slide2"></div>
+            <div id="slide3"></div>
             <div id="slide4"></div>
         </div>
         <footer>
