--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
 <body>
     <div id="wrapper">
         <header>
+            <div class="logo"></div>
             <nav>
                 <ul>
-                    <li><a href="#slide1">slide1</a></li>
-                    <li><a href="#slide2">slide2</a></li>
-                    <li><a href="#slide3">slide3</a></li>
-                    <li><a href="#slide4">В БОЙ!</a></li>
+                    <li><a href="#slide1">О проекте</a></li>
+                    <li><a href="#slide2">IT</a></li>
+                    <li><a href="#slide3">Пора к нам!</a></li>
+                    <li><a href="https://hackaton-blckt.c9users.io/main/player">В БОЙ!</a></li>
                 </ul>
             </nav>
         </header>
         <div id="main">
             <div id="slide1"></div>
             <div id="slide2"></div>
-            <div id="slide3"></div>
             <div id="slide4">
                 <button type="button" class="openDialog">ПРИСОЕДИНЯЙСЯ</button>
                 <div id="regForm">
